Add a part to play around with hyperparameters

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -98,6 +98,32 @@
    ]
   }
  ],
+ {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9f654340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np
+
+l = np.array([100,250,400,800,1200])
+perp = np.array([5,10,20,30,40,50,60])
+
+hyperparam_combination = np.array(np.meshgrid(l,perp)).T.reshape(-1,2)
+
+for i in hyperparam_combination:
+    l = i[0]
+    perp = i[1]
+
+    res = tsne(X, l=l, perp=perp, verbose=False)
+    pylab.scatter(res[:, 0], res[:, 1], s=20, c=y, cmap=pylab.cm.tab10, vmin=-0.5, vmax=9.5, alpha=0.7)
+    pylab.title("t-SNE with l = "+str(l)+", perp = "+str(perp))
+    pylab.colorbar(ticks=range(10))
+
+    pylab.show()"
+   ]
+  },
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
