--- a/nb.ipynb
+++ b/nb.ipynb
@@ -105,23 +105,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np
-
-l = np.array([100,250,400,800,1200])
-perp = np.array([5,10,20,30,40,50,60])
-
-hyperparam_combination = np.array(np.meshgrid(l,perp)).T.reshape(-1,2)
-
-for i in hyperparam_combination:
-    l = i[0]
-    perp = i[1]
-
-    res = tsne(X, l=l, perp=perp, verbose=False)
-    pylab.scatter(res[:, 0], res[:, 1], s=20, c=y, cmap=pylab.cm.tab10, vmin=-0.5, vmax=9.5, alpha=0.7)
-    pylab.title("t-SNE with l = "+str(l)+", perp = "+str(perp))
-    pylab.colorbar(ticks=range(10))
-
-    pylab.show()"
+    "import numpy as np\n",
+    "\n",
+    "l = np.array([100,250,400,800,1200])\n",
+    "perp = np.array([5,10,20,30,40,50,60])\n",
+    "\n",
+    "hyperparam_combination = np.array(np.meshgrid(l,perp)).T.reshape(-1,2)\n",
+    "\n",
+    "for i in hyperparam_combination:\n",
+    "    l = i[0]\n",
+    "    perp = i[1]\n",
+    "\n",
+    "    res = tsne(X, l=l, perp=perp, verbose=False)\n",
+    "    pylab.scatter(res[:, 0], res[:, 1], s=20, c=y, cmap=pylab.cm.tab10, vmin=-0.5, vmax=9.5, alpha=0.7)\n",
+    "    pylab.title(\"t-SNE with l = \"+str(l)+\", perp = \"+str(perp))\n",
+    "    pylab.colorbar(ticks=range(10))\n",
+    "\n",
+    "    pylab.show()"
    ]
   },
  "metadata": {
