--- a/nb.ipynb
+++ b/nb.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "99e3c43c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "03231014",
    "metadata": {},
    "outputs": [],
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "9f654340",
    "metadata": {},
    "outputs": [],
@@ -37,68 +46,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "284c0d76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sigmas: [ 5.98213702  9.13406836 10.98042699 ...  9.88479788  9.72000943\n",
-      " 10.18701319]\n",
-      "Iteration 1: error 3.2595\n",
-      "Iteration 11: error 3.2595\n",
-      "Iteration 21: error 3.2431\n",
-      "Iteration 31: error 2.3162\n",
-      "Iteration 41: error 1.8399\n",
-      "Iteration 51: error 1.6197\n",
-      "Iteration 61: error 1.486\n",
-      "Iteration 71: error 1.3933\n",
-      "Iteration 81: error 1.3244\n",
-      "Iteration 91: error 1.2701\n",
-      "Iteration 101: error 1.2251\n",
-      "Iteration 111: error 1.1875\n",
-      "Iteration 121: error 1.1557\n",
-      "Iteration 131: error 1.1282\n",
-      "Iteration 141: error 1.1041\n",
-      "Iteration 151: error 1.0828\n",
-      "Iteration 161: error 1.0637\n",
-      "Iteration 171: error 1.0465\n",
-      "Iteration 181: error 1.0309\n",
-      "Iteration 191: error 1.0166\n",
-      "Iteration 201: error 1.0035\n",
-      "Iteration 211: error 0.9914\n",
-      "Iteration 221: error 0.9801\n",
-      "Iteration 231: error 0.9697\n",
-      "Iteration 241: error 0.96\n",
-      "Iteration 251: error 0.9508\n",
-      "Iteration 261: error 0.9343\n",
-      "Iteration 271: error 0.9161\n",
-      "Iteration 281: error 0.8997\n",
-      "Iteration 291: error 0.8852\n",
-      "Iteration 301: error 0.8723\n",
-      "Iteration 311: error 0.8608\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = tsne(X, T=400, l=200)"
+    "#res = tsne(X, T=400, l=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "92870ad1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pylab.scatter(res[:, 0], res[:, 1], s=20, c=y)\n",
-    "pylab.show()"
+    "# pylab.scatter(res[:, 0], res[:, 1], s=20, c=y)\n",
+    "# pylab.show()"
    ]
-  }
- ],
-{
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiment some combinations of hyperparameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -125,9 +99,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ff6ad5a762580c17504674c9d479a31392755ddb54285ad0288b591aa43a1d14"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.9.1 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -140,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
